--- a/projetocrmangular/projetocrm/src/app/app.component.html
+++ b/projetocrmangular/projetocrm/src/app/app.component.html
@@ -34,27 +34,15 @@
       <small class="text-danger"[class.d-none]="senha.valid || senha.untouched" >Senha é obrigatório e possui no min 6 digitos</small>
     </div>
 
+    <!-- <div>
+      <input type="file" (change)="onFileSelected($event)">
+    </div> -->
+
     <button [disabled]="userForm.form.invalid" class="btn btn-primary" type="submit">Salvar</button>
     <button class="btn btn-primary" type="reset">Limpar Formulário</button>
 
   </form>
-  <div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th *ngFor="let head of headElements" scope="col">{{head}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let c of clientes">
-          <td>{{c.NOME}}</td>
-          <td>{{c.CPF}}</td>
-          <td>{{c.EMAIL}}</td>
-          <td><button class="btn-primary" (click)="selecionarClientePorId(c)" >Editar</button></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+
 
 </div>
 
