Adição de filtro front-end

--- a/projetocrmangular/projetocrm/src/app/home/home.component.html
+++ b/projetocrmangular/projetocrm/src/app/home/home.component.html
@@ -1,5 +1,9 @@
 <div>
-  <table class="table">
+  <br>
+  <h2>Tabela Clientes</h2>
+    <input class="form-control" id="myInput" type="text" (keyup)="applyFilter($event.target.value)" placeholder="Pesquise..">
+    <br>
+  <table class="table table-bordered table-striped">
     <thead>
       <tr>
         <th *ngFor="let head of headElements" scope="col">{{head}}</th>
