--- a/projetocrmangular/projetocrm/src/app/app.component.html
+++ b/projetocrmangular/projetocrm/src/app/app.component.html
@@ -3,6 +3,7 @@
   <button routerLink="produto" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" >Cadastro Produto</button>
   <button routerLink="cliente" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" >Cadastro Cliente</button>
   <button routerLink="listagem-clientes" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" >Lista Clientes</button>
+  <button routerLink="venda" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" >Venda</button>
 </div>
 
 <router-outlet></router-outlet>
