--- a/projetocrmangular/projetocrm/src/app/listagem-clientes/listagem-clientes.component.html
+++ b/projetocrmangular/projetocrm/src/app/listagem-clientes/listagem-clientes.component.html
@@ -14,7 +14,7 @@
         <td>{{c.nome}}</td>
         <td>{{c.cpf}}</td>
         <td>{{c.email}}</td>
-        <td><button class="btn-primary" (click)="selecionarClientePorId(c.idCliente)" >Editar</button></td>
+        <td><button class="btn-primary" (click)="selecionarClientePorId(c.idCliente)" routerLink="cliente" >Editar</button></td>
       </tr>
     </tbody>
   </table>
