--- a/projetocrmangular/projetocrm/src/app/cliente/cliente.component.html
+++ b/projetocrmangular/projetocrm/src/app/cliente/cliente.component.html
@@ -38,8 +38,8 @@
       <input type="file" (change)="onFileSelected($event)">
     </div> -->
 
-    <button [disabled]="userForm.form.invalid" class="btn btn-primary" type="submit">Salvar</button>
-    <button class="btn btn-primary" type="reset">Limpar Formulário</button>
+    <button [disabled]="userForm.form.invalid" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="submit">Salvar</button>
+    <button class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="reset">Limpar Formulário</button>
 
   </form>
 
