--- a/projetocrmangular/projetocrm/src/app/produto/produto.component.html
+++ b/projetocrmangular/projetocrm/src/app/produto/produto.component.html
@@ -34,8 +34,8 @@
       <small class="text-danger"[class.d-none]="tipo.valid || tipo.untouched" >Tipo é obrigatório</small>
     </div>
 
-    <button [disabled]="userForm.form.invalid" class="btn btn-primary" type="submit">Salvar</button>
-    <button class="btn btn-primary" type="reset">Limpar Formulário</button>
+    <button [disabled]="userForm.form.invalid" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="submit">Salvar</button>
+    <button class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="reset">Limpar Formulário</button>
 
   </form>
 
