--- a/projetocrmangular/projetocrm/src/app/venda/venda.component.html
+++ b/projetocrmangular/projetocrm/src/app/venda/venda.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <h1>Nova Venda</h1>
-  <form #userForm="ngForm" (ngSubmit)="onSubmit(vendaModel)"  novalidate >
+  <form #userForm="ngForm" (ngSubmit)="onSubmit(vendaModel)" >
     <div class="row">
 
       <div class="form-group">
@@ -24,9 +24,6 @@
   <table class="table table-borderless">
     <thead class="thead-light">
       <th>Produto</th>
-      <th>Codigo</th>
-      <th>Marca</th>
-      <th>Tipo</th>
       <th>Quantidade</th>
       <th>
         <a class="btn btn-sm btn-success text" (click)="AddouEditarItem(null, vendaModel.IDVENDA)">Add Produto</a>
@@ -39,13 +36,11 @@
         </td>
       </tr>
         <tr *ngFor="let p of itemProduto; let i=index;">
-          <td>{{itemProduto.NOME}}</td>
-          <td>{{itemProduto.CODIGO}}</td>
-          <td>{{itemProduto.MARCA}}</td>
-          <td>{{itemProduto.TIPO}}</td>
+          <td>{{itemProduto.ITEMNOME}}</td>
           <td>{{itemProduto.QUANTIDADE}}</td>
           <td>
-            <a class="btn btn-sm btn-success text" (click)="AddouEditarItem(i, vendaModel.IDVENDA)">Editar</a>
+            <a class="btn btn-sm btn-info text" (click)="AddouEditarItem(i, vendaModel.IDVENDA)">Editar</a>
+            <a class="btn btn-sm btn-danger text ml-1" (click)="onDeleteItem(itemProduto.IDITEMPRODUTO,i)">Excluir</a>
           </td>>
         </tr>
     </tbody>
