--- a/projetocrmangular/projetocrm/src/app/listagem-clientes/listagem-clientes.component.html
+++ b/projetocrmangular/projetocrm/src/app/listagem-clientes/listagem-clientes.component.html
@@ -10,11 +10,17 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let c of clientes; let i=index;">
-        <td>{{c.nome}}</td>
-        <td>{{c.cpf}}</td>
-        <td>{{c.email}}</td>
-        <td><button class="btn-primary" (click)="editarItem(c.idCliente)" routerLink="cliente" >Editar</button></td>
+      <tr *ngFor="let c of clientes; let id = index">
+        <td>
+          <span (keyup)="changeValue(id, 'nome', $event)" (blur)="updateList(id, 'nome', $event)" contenteditable="true">{{c.nome}}</span>
+        </td>
+        <td>
+          <span contenteditable="true" (keyup)="changeValue(id, 'age', $event)" (blur)="updateList(id, 'age', $event)">{{c.cpf}}</span>
+        </td>
+        <td>
+          <span contenteditable="true" (keyup)="changeValue(id, 'companyName', $event)" (blur)="updateList(id, 'companyName', $event)">{{c.email}}</span>
+        </td>
+        <td><button class="btn-primary" (click)="editarItem(c)">Editar</button></td>
       </tr>
     </tbody>
   </table>
