--- a/projetocrmangular/projetocrm/src/app/item-produto/item-produto.component.html
+++ b/projetocrmangular/projetocrm/src/app/item-produto/item-produto.component.html
@@ -8,7 +8,7 @@
     <label>Produto</label>
     <select name="IDITEMPRODUTO" #IDITEMPRODUTO="ngModel" [(ngModel)]="formData.IDPRODUTO" class="form-control" (change)="atualizarNomeItem($event.target)">
       <option value="0">- Select</option>
-      <option *ngFor="let produto of listaProdutos" value="{{produto.idProduto}}">{{produto.nome}}</option>
+      <option *ngFor="let produto of listaProdutos" value="{{produto.idProduto}}">{{produto.NOME}}</option>
       </select>
   </div>
   <div class="form-group">
