--- a/projetocrmangular/projetocrm/src/app/cliente/cliente.component.html
+++ b/projetocrmangular/projetocrm/src/app/cliente/cliente.component.html
@@ -10,27 +10,27 @@
 
     <div class="form-group">
       <label>Nome</label>
-      <input type="text" required #nome="ngModel" [class.is-invalid]="nome.invalid && nome.touched" class="form-control" name="nome" [(ngModel)]="clienteModel.NOME">
+      <input type="text" required #nome="ngModel" [class.is-invalid]="nome.invalid && nome.touched" class="form-control" name="nome" [(ngModel)]="clienteModel.nome">
       <small class="text-danger"[class.d-none]="nome.valid || nome.untouched" >Nome é obrigatório</small>
     </div>
 
     <div class="form-group">
       <label>CPF</label>
-      <input type="cpf" required #cpf="ngModel" pattern="^\d{10}[0-9]$" [class.is-invalid]="cpf.invalid && cpf.touched" class="form-control" name="cpf" [(ngModel)]="clienteModel.CPF">
+      <input type="cpf" required #cpf="ngModel" pattern="^\d{10}[0-9]$" [class.is-invalid]="cpf.invalid && cpf.touched" class="form-control" name="cpf" [(ngModel)]="clienteModel.cpf">
       <small class="text-danger"[class.d-none]="cpf.valid || cpf.untouched" >CPF é obrigatório e possui 11 digitos</small>
     </div>
 
     <div class="form-group">
       <label>Email</label>
       <input type="email" required #email="ngModel" [class.is-invalid]="email.invalid && email.touched" class="form-control" name="email"
-      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="*exemplo@email.com" [(ngModel)]="clienteModel.EMAIL">
+      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="*exemplo@email.com" [(ngModel)]="clienteModel.email">
       <small class="text-danger"[class.d-none]="email.valid || email.untouched">Email é obrigatório</small>
     </div>
 
     <div class="form-group">
       <label>Data de Nascimento</label>
       <input type="date"  placeholder="yyyy-MM-dd" required #dataDeNascimento="ngModel" [class.is-invalid]="dataDeNascimento.invalid && dataDeNascimento.touched" class="form-control" name="dataDeNascimento"
-      [(ngModel)]="clienteModel.DATA_NASCIMENTO">
+      [(ngModel)]="clienteModel.dataDeNascimento">
       <small class="text-danger"[class.d-none]="dataDeNascimento.valid || dataDeNascimento.untouched" >Data de nascimento é obrigatório</small>
     </div>
 
