--- a/projetocrmangular/projetocrm/src/app/item-produto/item-produto.component.html
+++ b/projetocrmangular/projetocrm/src/app/item-produto/item-produto.component.html
@@ -1,19 +1,19 @@
 <h4 class="display-4">Produto</h4>
 <hr>
 <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-  <input type="hidden" name="IDITEMPRODUTO" #IDITEMPRODUTO="ngModel" [(ngModel)]="formData.IDITEMPRODUTO">
-  <input type="hidden" name="IDVENDA" #IDVENDA="ngModel" [(ngModel)]="formData.IDVENDA">
-  <input type="hidden" name="ITEMNOME" #ITEMNOME="ngModel" [(ngModel)]="formData.ITEMNOME">
+  <input type="hidden" name="IDITEMPRODUTO" #IDITEMPRODUTO="ngModel" [(ngModel)]="formData.idItemProduto">
+  <input type="hidden" name="IDVENDA" #IDVENDA="ngModel" [(ngModel)]="formData.idVenda">
+  <input type="hidden" name="ITEMNOME" #ITEMNOME="ngModel" [(ngModel)]="formData.itemNome">
   <div class="form-group">
     <label>Produto</label>
-    <select name="IDITEMPRODUTO" #IDITEMPRODUTO="ngModel" [(ngModel)]="formData.IDPRODUTO" class="form-control" (change)="atualizarNomeItem($event.target)">
+    <select name="idItemProduto" #idItemProduto="ngModel" [(ngModel)]="formData.idProduto" class="form-control" (change)="atualizarNomeItem($event.target)">
       <option value="0">- Select</option>
-      <option *ngFor="let produto of listaProdutos" value="{{produto.idProduto}}">{{produto.NOME}}</option>
+      <option *ngFor="let produto of listaProdutos" value="{{produto.idProduto}}">{{produto.nome}}</option>
       </select>
   </div>
   <div class="form-group">
     <label>Quantidade</label>
-      <input type="text" name="QUANTIDADE" #QUANTIDADE="ngModel" [(ngModel)]="formData.QUANTIDADE" class="form-control">
+      <input type="text" name="quantidade" #quantidade="ngModel" [(ngModel)]="formData.quantidade" class="form-control">
   </div>
   <div class="form-group">
     <button  class="m-1 btn btn-light btn-outline-primary" type="submit">Adicionar</button>
