--- a/projetocrmangular/src/app/venda/venda.component.html
+++ b/projetocrmangular/src/app/venda/venda.component.html
@@ -7,7 +7,7 @@
         <label>Cliente</label>
         <select name="idCliente" #idCliente="ngModel" [(ngModel)]="service.formData.idCliente" class="form-control">
           <option value="0">Select</option>
-          <option *ngFor="let cliente of listaClientes" value="{{cliente.idCliente}}">{{cliente.nome}}</option>
+          <option *ngFor="let cliente of listaClientes" value="cliente.idCliente">{{cliente.nome}}</option>
         </select>
       </div>
 
