--- a/projetocrmangular/src/app/item-produto/item-produto.component.html
+++ b/projetocrmangular/src/app/item-produto/item-produto.component.html
@@ -2,18 +2,18 @@
 <hr>
 <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
   <input type="hidden" name="idItemProduto" #idItemProduto="ngModel" [(ngModel)]="formData.idItemProduto">
-  <input type="hidden" name="idVenda" #idVenda="ngModel" [(ngModel)]="formData.idVenda">
+  <input type="hidden" name="idProduto" #idProduto="ngModel" [(ngModel)]="formData.idProduto">
   <input type="hidden" name="itemNome" #itemNome="ngModel" [(ngModel)]="formData.itemNome">
   <div class="form-group">
     <label>Produto</label>
     <select name="idItemProduto" #idItemProduto="ngModel" [(ngModel)]="formData.idProduto" class="form-control" (change)="atualizarNomeItem($event.target)">
       <option value="0">- Select</option>
-      <option *ngFor="let produto of listaProdutos" [value]="produto.idProduto">{{produto.nome}}</option>
+      <option *ngFor="let produto of listaProdutos" [ngValue]="produto.idProduto">{{produto.nome}}</option>
       </select>
   </div>
   <div class="form-group">
     <label>Quantidade</label>
-      <input type="text" name="quantidade" #quantidade="ngModel" [(ngModel)]="formData.quantidade" class="form-control">
+      <input type="number" name="quantidade" #quantidade="ngModel" [(ngModel)]="formData.quantidade" class="form-control">
   </div>
   <div class="form-group">
     <button  class="m-1 btn btn-light btn-outline-primary" type="submit">Adicionar</button>
