--- a/projetocrmangular/src/app/listagem-clientes/listagem-clientes.component.html
+++ b/projetocrmangular/src/app/listagem-clientes/listagem-clientes.component.html
@@ -1,6 +1,12 @@
 <div>
   <br>
   <h2>Tabela Clientes</h2>
+  <div class="alert alert-danger" *ngIf="errorMsg">
+    <strong [ngClass] ="FadeOutSuccessMsg()"> {{errorMsg}} </strong>
+  </div>
+  <div class="alert alert-success" *ngIf="succsessMsg && !hideSuccessMessage">
+    <strong [ngClass] ="FadeOutSuccessMsg()"> {{succsessMsg}} </strong>
+  </div>
     <input class="form-control" id="myInput" type="text" (keyup)="applyFilter($event.target.value)" placeholder="Pesquise..">
     <br>
   <table class="table table-bordered table-striped">
