--- a/projetocrmangular/src/app/produto/produto.component.html
+++ b/projetocrmangular/src/app/produto/produto.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Formulário Produto</h1>
+  <h2>Cadastro Produto</h2>
   <div class="alert alert-danger" *ngIf="errorMsg">
     <strong [ngClass] ="FadeOutSuccessMsg()"> {{errorMsg}} </strong>
   </div>
