--- a/projetocrmangular/src/app/cliente/cliente.component.html
+++ b/projetocrmangular/src/app/cliente/cliente.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Cadastro Cliente</h1>
+  <h2>{{titulo}}</h2>
   <div class="alert alert-danger" *ngIf="errorMsg">
     <strong [ngClass] ="FadeOutSuccessMsg()"> {{errorMsg}} </strong>
   </div>
