--- a/projetocrmangular/src/app/listagem-clientes/listagem-clientes.component.html
+++ b/projetocrmangular/src/app/listagem-clientes/listagem-clientes.component.html
@@ -17,15 +17,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let c of clientes; let id = index">
-        <td>
-          <span  contenteditable="true" (keyup)="changeValue(id, 'nome', $event)" (blur)="updateList(id, 'nome', $event)">{{c.nome}}</span>
-        </td>
-        <td>
-          <span contenteditable="true" (keyup)="changeValue(id, 'cpf', $event)" (blur)="updateList(id, 'cpf', $event)">{{c.cpf}}</span>
-        </td>
-        <td>
-          <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">{{c.email}}</span>
-        </td>
+        <td>{{c.nome}}</td>
+        <td>{{c.cpf}} </td>
+        <td>{{c.email}} </td>
         <td><button class="btn-primary" (click)="editarItem(c)">Editar</button></td>
       </tr>
     </tbody>
